[add] 公有函数库以及基础架构

--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,2 +1,45 @@
 // global config
-$red: rgba(107, 79, 79, 0.685);
+:root {
+  --bs-blue: #409eff;
+  --bs-indigo: #6610f2;
+  --bs-purple: #6f42c1;
+  --bs-pink: #d63384;
+  --bs-red: #f56c6c;
+  --bs-orange: #fd7e14;
+  --bs-yellow: #e6a23c;
+  --bs-green: #67c23a;
+  --bs-teal: #20c997;
+  --bs-cyan: #909399;
+  --bs-white: #fff;
+  --bs-gray: #6c757d;
+  --bs-gray-dark: #343a40;
+  --bs-primary: #409eff;
+  --bs-secondary: #6c757d;
+  --bs-success: #67c23a;
+  --bs-info: #909399;
+  --bs-warning: #e6a23c;
+  --bs-danger: #f56c6c;
+  --bs-light: #f8f9fa;
+  --bs-dark: #212529;
+  --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
+    "Liberation Mono", "Courier New", monospace;
+  --bs-gradient: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0.15),
+    rgba(255, 255, 255, 0)
+  );
+}
+
+// yexk-color
+$danger: var(--bs-danger);
+$primary: var(--bs-primary);
+$secondary: var(--bs-secondary);
+$success: var(--bs-success);
+$info: var(--bs-info);
+$warning: var(--bs-warning);
+$danger: var(--bs-danger);
+$light: var(--bs-light);
+$dark: var(--bs-dark);
