啊啊啊啊啊啊

--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -33,6 +33,12 @@
   );
 }
 
+//@media
+// $lettleWidth: lettleWidth;
+// $simpleWidth: simpleWidth;
+// $hugeWidth: hugeWidth;
+// $testColor: testColor;
+
 // yexk-color
 $danger: var(--bs-danger);
 $primary: var(--bs-primary);
