--- a/src/views/chatRoom/Index.module.scss
+++ b/src/views/chatRoom/Index.module.scss
@@ -6,18 +6,38 @@
   justify-content: center;
   align-items: center;
   &-main {
+    background-color: #fff;
     width: 100%;
     height: 100%;
-    background-color: $testColor;
     display: flex;
-    // &-l {
-    // }
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    transition-duration: 0.5s;
+    &-l {
+      width: 240px;
+    }
+    &-r {
+      flex: 1;
+    }
   }
-  @media screen and (min-width: $lettleWidth) {
+}
+@media screen and (min-width: $lettleWidth) {
+  .chatRoom {
+    &-main {
+      width: 80%;
+      height: 90%;
+      // background-color: rgb(174, 231, 15);
+    }
+  }
+}
+@media screen and (min-width: $hugeWidth) {
+  .chatRoom {
     &-main {
       width: 70%;
+      max-width: 1200px;
       height: 80%;
-      background-color: rgb(174, 231, 15);
+      // background-color: rgb(17, 178, 184);
     }
   }
 }
