--- a/src/views/chatRoom/Index.module.scss
+++ b/src/views/chatRoom/Index.module.scss
@@ -7,15 +7,16 @@
   align-items: center;
   &-main {
     background-color: #fff;
+    border: 10px solid rgba(0, 0, 0, 0.8);
     width: 100%;
-    height: 100%;
+    height: calc(100% - 60px);
     display: flex;
-    padding: 10px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     transition-duration: 0.5s;
     &-l {
       width: 240px;
+      background-color: rgba(0, 0, 0, 0.1);
     }
     &-r {
       flex: 1;
