--- a/src/views/chatRoom/components/conversationList/Index.module.scss
+++ b/src/views/chatRoom/components/conversationList/Index.module.scss
@@ -3,6 +3,12 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
+  &-t {
+    padding: 10px;
+  }
+  .active {
+    background-color: rgba(0, 0, 0, 0.4);
+  }
   .conversation {
     display: flex;
     justify-content: space-between;
